compiler/testData/diagnostics/tests/testsWithJava21/newListMethods.diag.txt
/newListMethods.kt:38:22: error: using 'getFirst(): E!' is an error. 'getFirst()' member of List is redundant in Kotlin and might be removed soon. Please use 'first()' stdlib extension instead
        return super.getFirst()
                     ^^^^^^^^
/newListMethods.kt:42:22: error: using 'getLast(): E!' is an error. 'getLast()' member of List is redundant in Kotlin and might be removed soon. Please use 'last()' stdlib extension instead
        return super.getLast()
                     ^^^^^^^
/newListMethods.kt:49:7: error: unresolved reference: getFirst
    x.getFirst()
      ^^^^^^^^
/newListMethods.kt:50:7: error: function invocation 'first()' expected
    x.first // synthetic property for getFirst()
      ^^^^^
/newListMethods.kt:52:7: error: unresolved reference: getLast
    x.getLast()
      ^^^^^^^
/newListMethods.kt:53:7: error: function invocation 'last()' expected
    x.last
      ^^^^
